--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
   <title>Countdown App</title>
 </head>
 <body>
-  <div id="root"></div>
+  <div class="container">
+    <div id="root"></div>
+  </div>
 </body>
 </html>
